Fix style declaration, hide v symbols next to inbox groups and align text

--- a/gmail/style.css
+++ b/gmail/style.css
@@ -371,15 +371,20 @@ html.simpl div[role="tabpanel"] {
 	padding-bottom:1em;
 }
 
+/* Hide toggle next to inbox groups */
+html.simpl div[role="tabpanel"] h3 img {
+	display: none;
+}
+
 /* TODO: Support Tasks being toggled */
 
 /* Change The right sidebar's drop shadow to a stroke */ 
 
-.bq9,
-.bq9 div {
+html.simpl .bq9,
+html.simpl .bq9 div {
 	box-shadow:none;
 }
-.bq9 {
+html.simpl .bq9 {
 	border-left:1px solid rgba(0,0,0,0.1);
 }
 
